--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -1,9 +1,13 @@
 .card {
+  margin-right: 5px;
+  margin-bottom: 5px;
   position: relative;
   height: 100px;
   width: 160px;
-  border-radius: 4px;
-  transition: 0.3s;
+  border-radius: 10px;
+  border-style: double;
+  border-color: $color-4;
+  transition: 0.5s;
 
   h2 {
     font-size: 1rem;
