--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -6,11 +6,9 @@
     align-items: center;
     margin-bottom: 20px;
     background: $color-3;
-    border-radius: 20px;
+    border-radius: 50px;
     padding: 10px;
     color: $white;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.452);
-
     input {
       transform: translateY(1px);
     }
@@ -40,7 +38,6 @@
 
   button {
     margin: 0 auto 20px;
-    background: none;
     border: 2px solid $color-1;
     padding: 4px 10px;
     border-radius: 10px;
@@ -56,5 +53,38 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .radio-container {
+    width: 50%;
+    flex-direction: column;
+    margin-left: 100px;
+    margin-bottom: 10px;
+    padding: 5px;
+    input {
+      transform: translateY(2px);
+    }
+  }
+
+ .radio-container input {
+    align-content: center;
+    margin-right: 5px ;
+    padding: 5px;
+  }
+  .radio-container label {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    display: grid;
+  }
+
+  .radio-container input[type="range"] {
+    margin-bottom: 10px;
+  }
+
+  .radio-container input[type="radio"] {
+    margin-right: 0px;
+    margin-bottom: 10px;
   }
 }
