--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -2,16 +2,17 @@
   @include verticalCenter;
   margin: 5px auto;
   width: 200px;
-  border-radius: 20px;
+  border-radius: 50px;
   padding: 5px 0;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.307);
-  background: url(../../assets/img/main.jpg) center/cover;
+  box-shadow: 0 2px 3px rgba(250, 246, 246, 0.75);
+  background: url(../../assets/img/galaxy-background.jpg) center/cover;
 
   img {
     height: 40px;
   }
   h3 {
     margin-left: 10px;
-    color: $color-1;
+    color: $white;
+    font-size: 1.5rem;
   }
 }
