--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,4 @@
+/* Ce fichier est le point d'entrée de notre application. Il importe tous les autres fichiers SCSS */
 @import "./settings";
 @import "./components/navigation";
 @import "./components/logo";
