--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -45,4 +45,23 @@
     object-fit: cover;
     border-radius: 10px;
   }
+
+  .exchangeRates {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    font-weight: bold;
+    color: $color-1;
+    margin-top: 5px;
+  }
+
+  .exchangeRates li {
+    color : $color-1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
 }
